--- a/multi-project-cross-project-dependency-single-version/build.gradle
+++ b/multi-project-cross-project-dependency-single-version/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
   repositories {
     maven {
-      url "http://mvn.corp.attivio.com:10000/nexus/content/groups/public"
+      url "http://mvnrepo/nexus/content/groups/public"
     }
     mavenLocal()
   }
@@ -34,7 +34,7 @@ allprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 
-    group='com.attivio.releng.examples'
+    group='my.examples'
 
     release {
         tagTemplate = '$name-$version'
@@ -51,7 +51,7 @@ allprojects {
       repositories {
         maven {
           name "${project.mavenUploadRepository}"
-          url "http://mvn.corp.attivio.com:10000/nexus/content/repositories/${project.mavenUploadRepository}"
+          url "http://mvnrepo/nexus/content/repositories/${project.mavenUploadRepository}"
         }
       }
 
