set for local only

--- a/multi-project-cross-project-dependency-single-version/build.gradle
+++ b/multi-project-cross-project-dependency-single-version/build.gradle
@@ -39,7 +39,7 @@ allprojects {
     release {
         tagTemplate = '$name-$version'
     }
-    afterReleaseBuild.dependsOn('publish')
+    afterReleaseBuild.dependsOn('install')
 
     publishing {
         publications {
