--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 allprojects {
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
 
     repositories {
         jcenter()
@@ -13,7 +14,7 @@ allprojects {
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
-    
+
     task(startmessage) << {
         println 'starting build'
     }
@@ -22,7 +23,7 @@ allprojects {
         println project.version
     }
 
-    beforeReleaseBuild.dependsOn startmessage
+    beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal
     afterReleaseBuild.dependsOn printversion
 }
 
