--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -1,11 +1,61 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        // classpath 'net.researchgate:gradle-release:2.6.0'
+        classpath 'org.ajoberstar:gradle-git-publish:0.3.2'
+        classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
+    }
+}
+
 plugins {
     id 'idea'
     id 'net.researchgate.release' version '2.6.0'
 }
 
-allprojects {
+ext {
+    githubUrl = "https://github.com/concordion/${project.name}"
+    issuesUrl = "${githubUrl}/issues"
+    gitVcsUrl = "${githubUrl}.git"
+    gitRepoUri = "git@github.com:concordion/${project.name}.git"
+    vcsConnection = "scm:git:git://github.com/concordion/${project.name}.git"
+
+    if (!project.hasProperty("bintrayUsername")) {
+        bintrayUsername = ''
+    }
+    if (!project.hasProperty("bintrayApiKey")) {
+        bintrayApiKey = ''
+    }
+    if (!project.hasProperty("bintrayPassphrase")) {
+        bintrayPassphrase = ''
+    }
+    if (!project.hasProperty("sonatypeUsername")) {
+        sonatypeUsername = ''
+    }
+    if (!project.hasProperty("sonatypePassword")) {
+        sonatypePassword = ''
+    }
+}
+
+group = 'org.nigel'
+
+task build {
+    dependsOn subprojects*.tasks*.findByName('build').minus(null)
+}
+
+subprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
+    apply plugin: 'findbugs'
+    apply plugin: 'checkstyle'
+    apply plugin: 'jacoco'
+    apply plugin: 'maven'
+    apply plugin: com.jfrog.bintray.gradle.BintrayPlugin
+    apply plugin: org.ajoberstar.gradle.git.publish.GitPublishPlugin    
+
+    group = 'org.nigel'
 
     repositories {
         jcenter()
@@ -15,11 +65,11 @@ allprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 
-    task(startmessage) << {
+    task(startmessage).doLast {
         println 'starting build'
     }
 
-    task(printversion) << {
+    task(printversion).doLast {
         println project.version
         println project.group
         println project.name
@@ -27,6 +77,110 @@ allprojects {
 
     beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal
     afterReleaseBuild.dependsOn printversion
+
+
+
+    // Publishing
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+    
+    artifacts {
+         archives sourcesJar
+    }
+    
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+
+    // publishing {
+    //     repositories {
+    //         maven {
+    //             if (project.version.endsWith('-SNAPSHOT')) {
+    //                 url "http://oss.jfrog.org/artifactory/simple/oss-snapshot-local/"
+    //                 credentials {
+    //                     username bintrayUsername
+    //                     password bintrayApiKey
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
+
+    publishing {
+        publications {
+            main(MavenPublication) {
+                artifact sourcesJar {
+                    classifier "sources"
+                }
+
+                artifact javadocJar {
+                    classifier "javadoc"
+                }
+
+                from components.java
+
+                pom.withXml {
+                    asNode().children().last() + {
+                        resolveStrategy = Closure.DELEGATE_FIRST
+
+                        name project.name
+                        description project.description
+                        url 'http://www.concordion.org/cubano'
+                        packaging 'jar'
+                        inceptionYear '2017'
+
+                        scm {
+                            url gitVcsUrl
+                            connection vcsConnection
+                            developerConnection vcsConnection
+                        }
+
+                        licenses {
+                            license {
+                                name 'The Apache Software License, Version 2.0'
+                                url 'http://www.apache.org/licenses/LICENSE-2.0.html'
+                                distribution 'repo'
+                            }
+                        }
+
+                        issueManagement {
+                            system 'GitHub Issues'
+                            url issuesUrl
+                        }
+
+                        developers {
+                            developer {
+                                id 'andrew-sumner'
+                                name 'Andrew Sumner'
+                                roles { role 'Project Creator' }
+                            }
+                            developer {
+                                id 'nigelcharman'
+                                name 'Nigel Charman'
+                                roles { role 'Developer' }
+                            }
+                            developer {
+                                id 'jimmykemp'
+                                name 'Jimmy Kemp'
+                                roles { role 'Developer' }
+                            }
+                        }
+                    }
+                    asNode().dependencies.'*'.findAll() {
+                        it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                            dep.name == it.artifactId.text()
+                        }
+                    }.each() {
+                        it.scope*.value = 'compile'
+                    }
+                }
+            }
+        }
+    }
 }
 
 release {
