--- a/multi-project-single-version/gradle/wrapper/gradle-wrapper.properties
+++ b/multi-project-single-version/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Jan 16 20:06:51 CET 2016
+#Sat Dec 30 14:36:20 NZDT 2017
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4.1-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-bin.zip
+zipStoreBase=GRADLE_USER_HOME
