Added chunk from Cubano's build file

--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -11,7 +11,6 @@ buildscript {
 }
 
 plugins {
-    id 'idea'
     id 'net.researchgate.release' version '2.6.0'
 }
 
@@ -39,23 +38,52 @@ ext {
     }
 }
 
-group = 'org.nigel'
-
 task build {
     dependsOn subprojects*.tasks*.findByName('build').minus(null)
 }
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'maven-publish'
     apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
+    apply plugin: 'eclipse'    
     apply plugin: 'jacoco'
     apply plugin: 'maven'
+    apply plugin: 'maven-publish'
     apply plugin: com.jfrog.bintray.gradle.BintrayPlugin
     apply plugin: org.ajoberstar.gradle.git.publish.GitPublishPlugin    
 
     group = 'org.nigel'
+
+    // need utf-8 to get text with non-standard chars e.g. curly apostrophes used correctly 
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+
+    // This is a work around for an outstanding issue getting eclipse plugin to honour encoding options for java
+    // https://issues.gradle.org/browse/GRADLE-2274
+    eclipse {
+        File f = file('.settings')
+
+        if (f.exists()) {
+            f = file('.settings/org.eclipse.core.resources.prefs')
+            f.write('eclipse.preferences.version=1\n')
+            f.append('encoding/<project>=UTF-8')
+        }
+    }
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+    
+    repositories {
+        // Only required while webdriver project waiting for htmlelements to be published
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+    }
+
+    configurations {
+        javaDoclet
+    }    
 
     repositories {
         jcenter()
