Added chunk from Cubano's build file

--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -243,7 +243,7 @@ subprojects {
         user = bintrayUsername   // set this in your ~/.gradle/gradle.properties file
         key = bintrayApiKey         // set this in your ~/.gradle/gradle.properties file
         publications = ['main'] // see publications closure
-//        dryRun = true
+       dryRun = true
 //        publish = true
         pkg {
             repo = 'maven'
