--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -130,7 +130,7 @@ subprojects {
     // task publishRelease()
     // publishRelease.dependsOn 'net.researchgate.release'
 //    publishRelease.dependsOn getTasksByName('release', true)
-    // task publishRelease(dependsOn: ['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs', getTasksByName('release', true)])
+    beforeReleaseBuild.dependsOn(['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs'])
 
     gitPublish {
         repoUri = 'git@github.com:concordion/cubano.git'
