Removed first beforeReleaseBuild dependency

--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -107,7 +107,7 @@ subprojects {
         println project.name
     }
 
-    beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal
+    // beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal
     afterReleaseBuild.dependsOn printversion
 
 
