--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -4,15 +4,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        // classpath 'net.researchgate:gradle-release:2.6.0'
+        classpath 'net.researchgate:gradle-release:2.6.0'
         classpath 'org.ajoberstar:gradle-git-publish:0.3.2'
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
     }
 }
 
-plugins {
-    id 'net.researchgate.release' version '2.6.0'
-}
+apply plugin: net.researchgate.release.ReleasePlugin
 
 ext {
     githubUrl = "https://github.com/concordion/${project.name}"
@@ -42,9 +40,8 @@ task build {
     dependsOn subprojects*.tasks*.findByName('build').minus(null)
 }
 
-// task publishRelease()
-// publishRelease.dependsOn 'release'
-
+task publishRelease()
+publishRelease.dependsOn 'release'
 
 subprojects {
     apply plugin: 'java'
