--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -40,8 +40,8 @@ task build {
     dependsOn subprojects*.tasks*.findByName('build').minus(null)
 }
 
-task publishRelease()
-publishRelease.dependsOn 'release'
+// task publishRelease()
+// publishRelease.dependsOn 'release'
 
 subprojects {
     apply plugin: 'java'
@@ -127,7 +127,7 @@ subprojects {
     // task publishRelease()
     // publishRelease.dependsOn 'net.researchgate.release'
 //    publishRelease.dependsOn getTasksByName('release', true)
-    // publishRelease.dependsOn(['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs'])
+    publishRelease.dependsOn(['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs', 'release'])
 
     gitPublish {
         repoUri = 'git@github.com:concordion/cubano.git'
