--- a/multi-project-single-version/build.gradle
+++ b/multi-project-single-version/build.gradle
@@ -104,7 +104,7 @@ subprojects {
         println project.name
     }
 
-    beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal
+    beforeReleaseBuild.dependsOn startmessage, publishToMavenLocal, ':clean'
     afterReleaseBuild.dependsOn printversion
 
 
@@ -124,7 +124,7 @@ subprojects {
         tagTemplate = '$name-$version'
     }
 
-    task publishRelease(dependsOn: ['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs', ':release'])
+    task publishRelease(dependsOn: ['clean', 'test', 'javadoc', 'sourcesJar', 'javadocJar', 'publishDocs', ':subproject1:release'])
 
     // publishRelease.dependsOn 'net.researchgate.release'
 //    publishRelease.dependsOn getTasksByName('release', true)
